# foo

./: .env.toml  .gitignore  Cargo.toml  README.md  SUBMODULE-CHEATSHEET.md  docker-compose.yml
benches/: task_processor.rs
examples/: demo.rs  task_creation.rs  worker_pool_creation.rs  worker_pool_processing.rs
migrations/: 20241229062042_create_table_backie.down.sql  20241229062042_create_table_backie.up.sql
src/: catch_unwind.rs  errors.rs  lib.rs  queries.rs  runnable.rs  schema.rs  sqlite_helpers.rs  sqlite_task.rs  store.rs  task.rs  worker.rs  worker_pool.rs
src/store/: pg_task_store.rs  sqlite_task_store.rs
