[package]
name = "foo"
version = "0.9.0"
authors = [
    "Rafael Caricio <rafael@caricio.com>",
]
description = "Background task processing for Rust applications with Tokio, Diesel, and PostgreSQL."
keywords = ["async", "background", "task", "jobs", "queue"]
repository = "https://github.com/rafaelcaricio/backie"
edition = "2021"
license = "MIT"
readme = "README.md"
rust-version = "1.67"

[dependencies]
sqlite_macros = { workspace = true }


chrono = { version = "0.4", default-features = false, features = ["now"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1.1", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
tokio = { version = "1.25", features = ["rt", "time", "macros", "sync"] }

[dev-dependencies]
itertools = "0.10"
anyhow = { workspace = true }
env_logger = { workspace = true }

[[example]]
name = "demo"
required-features = ["full-tokio"] 

[features]
full-tokio = ["tokio/full"]
